--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,20 @@
 <resources>
-    <string name="app_name">PAXPOSLink</string>
+    <string name="app_name">PAX Client</string>
+    <string name="submit">Submit</string>
+    <string name="input_pax_s_ip_address">Input Pax\'s IP address</string>
+    <string name="test_connection">Test Connection</string>
+    <string name="connect_success">Connect success</string>
+    <string name="connect_failed">Connect failed</string>
+    <string name="input_sale_amount">Input sale amount</string>
+    <string name="input_refund_amount">Input refund amount</string>
+    <string name="input_tip_adjust_amount">Input tip amount</string>
+    <string name="input_amount">Input amount</string>
+    <string name="input_orig_ref_number">Input orig ref number</string>
+    <string name="input_auth_code">Input auth code</string>
+    <string name="submit_void">Void</string>
+    <string name="sale">Sale</string>
+    <string name="refund">Refund</string>
+    <string name="adjust">Adjust</string>
+    <string name="force">Force</string>
+    <string name="close_batch">Close Batch</string>
 </resources>
